--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </p>
         <ul>
             <li class="paper">
-                <span class="title">[11:50:12:05] A Compendium of Regular Expression Shapes in SPARQL Queries.</span>
+                <span class="title">[11:50-12:05] A Compendium of Regular Expression Shapes in SPARQL Queries.</span>
                 <span class="authors">Janik Hammerer and Wim Martens.</span>
             </li>
             <li class="paper">
@@ -290,7 +290,7 @@
                 Leonid Libkin is a professor of computer science at the University of Edinburgh and query language researcher at RelationalAI; he is also holding part-time industrial chair position at Université Paris-Cité. He was previously scientific advisor to Neo4j, professor at the University of Toronto, at École Normale Supérieure, and member of research staff at Bell Laboratories in Murray Hill. He received his PhD from the University of Pennsylvania in 1994. His main research interests are in the areas of data management and logic in computer science. He has written five books and over 250 technical papers. His awards include a Marie Curie Chair Award, a Royal Society Wolfson Research Merit Award, and eight Best Paper Awards. He has chaired program committees of major database and logic conferences (PODS, LICS, ICDT), and served as chair of the 2010 Federated Logic Conference and general chair of PODS. He is an ACM fellow, a fellow of the Royal Society of Edinburgh, and a member of Academia Europaea.
                 <ul>
                     <li class="paper">
-                        <span class="title">[14:45-15:00] A Programming Language for Relational Data.</span>
+                        <span class="title">[14:45-15:00] A Programming Language for Relational Data (RelationalAI Sponsor talk).</span>
                         <span class="authors">Wim Martens.</span>
                     </li>
                  </ul>
