--- a/index.html
+++ b/index.html
@@ -316,12 +316,12 @@
                 <span class="authors">Felix Sasaki.</span>
             </li>
             <li class="paper">
-                <span class="title">[16:00-16:15] Bloomberg Sponsor Talk.</span>
-                <span class="authors">TBA.</span>
+                <span class="title">[16:00-16:15] Knowledge Graph Design for Contextualizing Knowledge (Bloomberg Sponsor Talk).</span>
+                <span class="authors">Michael Pool.</span>
             </li>
 	     <li class="paper">
-                <span class="title">[16:15-16:30] Amazon Sponsor Talk.</span>
-                <span class="authors">TBA.</span>
+                <span class="title">[16:15-16:30] Designing A OneGraph Engine (Amazon Sponsor Talk).</span>
+                <span class="authors">Lefteris Sidirourgos.</span>
             </li>
         </ul>
 
