--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+Ana<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -335,10 +335,6 @@
 	    <br>
 	    <br>
         <ul>
-            <li class="paper">
-                <span class="title">Understanding Streaming Graph Processing Systems: a Comparative Study of Models, Performance, and Trade-offs.</span>
-                <span class="authors">Shaoshuai Du, Joze Rozanec, Ana Lucia Varbanescu, and Andy D. Pimentel.</span>
-            </li>
             <li class="paper">
                 <span class="title">Graph Neural Networks on Graph Databases.</span>
                 <span class="authors">Dmytro Lopushanskyy and Borun Shi.</span>
