--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Ana<!doctype html>
     
     <div>
         <a href="/"><img src="img/grades_nda_v3_twitter.png" alt="Example photo" style="width:13%; margin-right: 1em;"></a>
-        <a href="/"><img src="img/sigmod-banner-2.jpg" alt="GRADES-NDA" style="width:80%"></a>
+        <a href="/"><img src="img/sigmod-banner-2.jpg" alt="GRADES-NDA" style="width:40%"></a>
     </div>
     <div id="title-container">9th Joint Workshop on Graph Data Management
         Experiences &amp; Systems (GRADES) and Network Data Analytics (NDA)
@@ -47,10 +47,10 @@ Ana<!doctype html>
     </div>
     <nav>
         <ul>
-           <li><a href="#accepted" class="bordered">Accepted Papers</a></li> 
+           <!--<li><a href="#accepted" class="bordered">Accepted Papers</a></li> -->
 <!--             <li><a href="#">Registration</a></li>-->
             <li><a href="#dates">Important Dates</a></li>
-            <li><a href="#program" class="bordered">Program</a></li>
+            <!-- <li><a href="#program" class="bordered">Program</a></li> -->
 <!--             <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3461837" class="bordered">Proceedings</a></li> -->
 <!--             <li><a href="#submission">Paper Submission</a></li> -->
             <li><a href="#pc">Program Committee</a></li>
@@ -362,11 +362,11 @@ Ana<!doctype html>
 		<div class="col">
 			<h2><a id="dates"></a>Important Dates</h2>
 			<ul>
-                <li>Abstract Submission: <s>March 17, 2025</s> March 24, 2025</li>
-                <li>Paper Submission: <s>March 31, 2025</s> April 4, 2025 (firm)</li>
-                <li>Notifications: <s>May 1, 2025</s></li>
-                <li>Camera Ready Submission: <s>May 11, 2025</s> May 16, 2025 (firm)</li>
-                <li>Workshop Date: June 27, 2025</li>
+                <li>Abstract Submission: March 08, 2026</li>
+                <li>Paper Submission: March 15, 2026</li>
+                <li>Notifications: April 13, 2026</s></li>
+                <li>Camera Ready Submission: April 26, 2026</li>
+                <li>Workshop Date: May 31, 2026</li>
 			</ul>
 			<p></p>
 			<i>All deadlines are 23:59 AoE.</i>
