--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Ana<!doctype html>
+<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -33,7 +33,7 @@ Ana<!doctype html>
     
     <div>
         <a href="/"><img src="img/grades_nda_v3_twitter.png" alt="Example photo" style="width:13%; margin-right: 1em;"></a>
-        <a href="/"><img src="img/sigmod-banner-2.jpg" alt="GRADES-NDA" style="width:40%"></a>
+        <a href="/"><img src="img/sigmod-banner-2.jpg" alt="GRADES-NDA" style="width:80%; height:40%"></a>
     </div>
     <div id="title-container">9th Joint Workshop on Graph Data Management
         Experiences &amp; Systems (GRADES) and Network Data Analytics (NDA)
